--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -672,15 +672,17 @@ gg_uvas$UVAS_vistelsetid_inrikes_tid_Dalarna
 # Boende och flyttmönster
 
 ## Boende
-Det finns flera sätt att mäta boende på och alla sätt indikerar boendeskillnader mellan inrikes och utrikes födda. Typ av boende (villa eller lägenhet), boendeyta och bostadsägande säger alla någonting om hur människor bor, något som givetvis speglar den ekonomiska situation man lever i. Det innebär, precis som på de flesta andra områden, att gruppen utrikes födda kommer att ha en stor spridning avseende etablering i samhället. Några i gruppen kommer att ha bott i Sverige i mindre än ett år och andra i flera decennier. Således finns även inom boende anledning att göra analyser uppdelat på vistelsetid i Sverige. Människor som bott längre i Sverige äger i högre utsträckning sitt eget boende, antingen genom äganderätt (småhus) eller bostadsrätt (småhus eller lägenhet).
+Det finns flera sätt att mäta boende på och alla indikerar boendeskillnader mellan inrikes och utrikes födda. Typ av boende (villa eller lägenhet), boendeyta och bostadsägande säger alla någonting om hur människor bor, något som också speglar den ekonomiska situationen. Det innebär, precis som på de flesta andra områden, att gruppen utrikes födda kommer att ha en stor spridning avseende etablering i samhället. Några i gruppen kommer att ha bott i Sverige i mindre än ett år och andra i flera decennier. Således finns även inom boendeområdet anledning att göra analyser uppdelat på vistelsetid i Sverige. Människor som bott längre i Sverige äger i högre utsträckning sitt eget boende, antingen genom äganderätt (småhus) eller bostadsrätt (småhus eller lägenhet).
 
-Att en större andel utrikes födda personer bor i hyresrätt, kan förklaras med att nyanlända personer generellt ännu inte hunnit etablera sig i Sverige så pass att de har ekonomiska möjligheter att äga sitt eget boende. De utrikes födda bland Dalarnas invånare som bott i Sverige länge (mer än 10 år) tenderar dock att äga sin bostad, antingen som äganderätt eller bostadsrätt, i relativt stor utsträckning, ungefär `r boendetyp_10_ar_äga` procent av de utrikes födda gör det. Det går dock att konstatera att andelen som äger sin bostad är väsentligt högre bland de som är födda i Sverige, ca `r boendetyp_inrikes_äga` procent av de inrikes födda gör det. 
+Att en större andel utrikes födda personer bor i hyresrätt, kan förklaras med att nyanlända personer generellt ännu inte hunnit etablera sig i Sverige så pass att de har ekonomiska möjligheter att äga sitt eget boende. De utrikes födda bland Dalarnas invånare som bott i Sverige länge (mer än 10 år) tenderar dock att äga sin bostad, antingen som äganderätt eller bostadsrätt, i relativt stor utsträckning, ungefär `r boendetyp_10_ar_äga` procent av de utrikes födda gör det. Det går dock att konstatera att andelen som äger sin bostad är väsentligt högre bland de som är inrikes födda, ca `r boendetyp_inrikes_äga` procent. 
 
 ```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
 gg_boendetyp_upplatelseform$boendetyp_vistelsetid_inrikes
 ```
 
-Ytterligare en relevant analys rörande boende är andelen trångbodda hushåll. Trångboddhet i lägenheter i flerbostadshus mäts idag oftast enligt Norm 3 ([Boverket](https://www.boverket.se/sv/kommunernas-bostadsforsorjning/underlag-for-bostadsforsorjningen/sarskilda-grupper/trangbodda/){target="_blank"}), vilket innebär att fler boende än en person per rum är trångbott, kök och ett rum (vardagsrum) oräknat. Sammanboende förutsätts behöva ett rum färre än ensamstående samt att ensamstående personer boende i ett rum inte bedöms vara trångbodda. Detta innebär att en ensamstående vuxen med två barn behöver en lägenhet med minst fyra rum för att inte vara trångbodda. Två sammanboende vuxna med ett barn däremot behöver endast tre rum för att inte vara trångbodda eftersom de vuxna antas kunna dela ett sovrum.
+Vid norm 2 sätts gränsen för trångboddhet vid högst två personer per rum, exklusive kök och vardagsrum.
+
+Ytterligare en relevant analys rörande boende är andelen trångbodda hushåll. Trångboddhet i lägenheter i flerbostadshus mäts av SCB enligt Norm 2 ([Boverket](https://www.boverket.se/sv/kommunernas-bostadsforsorjning/underlag-for-bostadsforsorjningen/sarskilda-grupper/trangbodda/){target="_blank"}), vilket innebär att gränsen för trångboddhet går vid högst två personer per rum, exklusive kök och vardagsrum.
 
 Trångboddhet i småhus kan inte mätas på samma sätt eftersom att uppgifter på antal rum inte samlas in. Det går att mäta med hjälp av bostadsyta per hushållsmedlem även om det måttet blir trubbigare än det för flerbostadshus. Trångboddhet i småhushushåll anses dock inte vara ett utbrett problem, varför endast trångboddhet i flerbostadshus behandlas här.
 
@@ -694,9 +696,11 @@ gg_trangboddhet$trangboddhet_antal_Dalarna
 
 <span class = "kommentar">Vad mer behövs kring boende? Nedanstående är inte justerat ännu.</span>
 
+I en kartläggning av trångbodhet utifrån vistelsetid i Sverige så kan det konstateras att många utrikes födda är trångbodda en lång tid efter att de har invandrat. Vidare analyser (inte visade här) visar att det är först i gruppen utlandsfödda som kom till Sverige för ca 35 år sedan som nivåerna på trångboddheten har sjunkit till nivåer jämförbara med de med utländsk bakgrund som är födda i Sverige eller de med svensk bakgrund. Det är viktigt att beakta att denna data visar olika grupper som har varit i Sverige flyttat hit under olika tidsperioder. Det betyder att den demografiska sammansättningen mellan grupperna inte är densamma samt att de kan ha olika preferenser för hur stort de vill bo. Diagram 32 stödjer dock slutsatsen att det finns stora skillnader på bostadsmarknaden mellan de som är inrikes och utrikes födda, samt visar att skillnaderna kan bestå under en väldigt lång tid efter att en person har invandrat till Sverige.
+
 <span class = "kommentar">*Beräkna 2019 års Diagram 32 - trångboddhet efter vistelsetid*</span>
 
-I en kartläggning av trångbodhet utifrån vistelsetid i Sverige så kan det konstateras att många utrikes födda är trångbodda en lång tid efter att de har invandrat. Vidare analyser (inte visade här) visar att det är först i gruppen utlandsfödda som kom till Sverige för ca 35 år sedan som nivåerna på trångboddheten har sjunkit till nivåer jämförbara med de med utländsk bakgrund som är födda i Sverige eller de med svensk bakgrund. Det är viktigt att beakta att denna data visar olika grupper som har varit i Sverige flyttat hit under olika tidsperioder. Det betyder att den demografiska sammansättningen mellan grupperna inte är densamma samt att de kan ha olika preferenser för hur stort de vill bo. Diagram 32 stödjer dock slutsatsen att det finns stora skillnader på bostadsmarknaden mellan de som är inrikes och utrikes födda, samt visar att skillnaderna kan bestå under en väldigt lång tid efter att en person har invandrat till Sverige. 
+<span class = "kommentar">Förslag att vi stryker resterande delar kring boende, d v s kommunperspektivet samt boendeytor per person </span>
 
 När det gäller trångboddhet är det viktigt att känna till att det vanligtvis är ett lokalt fenomen. Det är fullt möjligt att många kan vara trångbodda i ett bostadsområde samtidigt som få hushåll är trångbodda i grannområdet.
 
@@ -717,23 +721,29 @@ Skillnaden i boendeyta per person för personer med svensk och utländsk bakgrun
 Skillnaden mellan de med svensk och utländsk bakgrund är betydligt större för de som bor i flerbostadshus i samtliga åldersgrupper fram till 75+ år. Anledningen till detta kan bero på flera faktorer, som exempelvis att personer med svensk bakgrund har större möjlighet att påverka storleken på sin bostad, antingen genom att köpa en större bostad, en längre kötid, eller möjlighet att byta hyreskontrakt eller liknande. En annan förklaring är att personer med utländsk bakgrund i genomsnitt är en person mer i hushållet än personer med svensk bakgrund. Förutsatt samma boendeyta, får då personer med utländsk bakgrund automatiskt mindre boendeyta per person än de med svensk bakgrund. Det kan också finns skillnader i preferenser för hur stort man vill bo mellan de här två grupperna.
 
 ## Flyttmönster
-Bland inrikes födda var det 94 263 personer mellan år 2002–2018 som flyttade till Dalarnas län från övriga Sverige och 99 304 som flyttade från länet till övriga Sverige, vilket gav ett flyttnetto på -5 041 personer, eller i genomsnitt -504 per år. I gruppen utrikes födda flyttade 19 819 personer till Dalarnas län från övriga Sverige och 23 912 personer flyttade till övriga Sverige från länet, vilket gav ett flyttnetto på -4 093 personer, eller i genomsnitt -410 per år. Det kan konstateras att flyttströmmarna har varit stora både till och från länet, både för utrikes och inrikes födda. Båda grupperna flyttar dock i större utsträckning från Dalarna till övriga Sverige än till Dalarna från övriga Sverige. Utrikes födda personer har generellt sätt varit mer benägna att flytta från länet än inrikes födda varit.
 
-Innan utrikes föddas flyttningar analyseras djupare kommer här först analys om inrikes flyttning till/från Dalarna generellt, och hur den skiljer sig i två olika åldersgrupper. Förmodligen är inrikes omflyttningar den faktor som på längre sikt mer än någon annan påverkar den regionala befolkningsstrukturen. Majoriteten av de som flyttar är unga mellan 20–35 år. I regioner med inflyttningsöverskott ökar därför antalet unga medan situationen är den motsatta i regioner med utflyttningsöverskott. Regioner som har en växande befolkning genom ett positivt flyttnetto, får en yngre befolkning och därmed även ett ökat barnafödande, med regionala födelseöverskott som följd.   Som konstaterat har flyttnettot inrikes till/från Dalarna varit negativt under de senaste tio åren. Främst gäller detta yngre vuxna som är mellan 19–28 år.
+Sedan slutet av 1990-talet har Dalarna haft ett negativt inrikes flyttnetto under en överväldigande majoritet av åren.  I Dalarna är det framförallt unga personer som flyttar, vilket kan förklaras med att de flyttar för att studera och arbeta. Flyttar från Dalarna inrikes sker i första hand till antingen större eller näraliggande län. Flest flyttar skedde till Stockholm, följt av Västmanland och Uppsala (se *Befolkningsutvecklingen i Dalarna - länka*). Effekten av att unga flyttar från länet blir en allt mer ålderstigen befolkning.
 
-Mellan år 2008–2018 var det i genomsnitt 793 fler personer per år som flyttade från Dalarna till övriga landet än till Dalarna i åldersgruppen 19–28 år, vilket gav ett negativt flyttnetto inrikes på -793 personer per år i åldersgruppen. För Dalarnas del är det till största del storstads- och universitetsstäder som den yngre befolkningen väljer att flytta till. Enligt en studie från Jönköpings universitet beror detta på en kombination av tillgång till högre utbildning, en stark arbetsmarknad och ett livsstilspaket som finns i större städer som den yngre generation anser vara attraktiv.  Ett perspektiv som brukar lyftas fram är att många flyttar tillbaka till sin hemkommun efter studier eller arbete i ett annat län. Ofta sammanfaller hemflytten med familjebildning. Denna föreställning stämmer till viss del och mellan år 2008–2018 var det i genomsnitt 138 fler personer per år som flyttade till Dalarna från övriga landet än från Dalarna i åldersgruppen 29–44 år, detta gav ett flyttöverskott på +138 personer i åldersgruppen. Summerat innebär detta att flyttnettot inrikes totalt för åldersgruppen 19–44 år var -654 personer per år i Dalarnas län. Det är viktigt att komma ihåg att antalet flyttningar är stort både till och från länet, och att det finns många mekanismer som påverkar varför vi flyttar. Totalt flyttade 69 153 personer till Dalarnas län från övriga landet, och 75 019 flyttade från Dalarnas län till övriga landet mellan 2008–2018.
+<span class = "kommentar"> Hämta in diagram från Befolkningsutvecklingen i Dalarna i 3.1 - Inrikes flyttningsöverskott Dalarna </span>
 
-När flyttnettot per år studeras kan det konstateras att det finns variationer över tid, men att den genomgående trenden är att flyttnettot mot övriga Sverige är negativt de flesta år både för inrikes och utrikes födda. Undantagen är år 2014 och 2015 när flyttnettot var positivt för utrikes födda och åren 2002, 2003, 2017 och 2018 när flyttnettot var positivt för inrikes födda.  Utflyttningen av utrikes födda till övriga Sverige har sedan ökat stort sedan år 2016. Anledningen en ökad invandring under dessa år. Ökningen har i sin tur ökat omflyttningarna för utrikes födda. Det kan konstateras att många av de som invandrat de senaste åren har valt att flytta från Dalarnas län. 
+Tydligt är att många av de som invandrade till länet i under åren runt 2015-2016 har flyttat därifrån sedan dess. Totalt har 6 456 utrikes födda flyttat från Dalarna till andra län sedan 2017 (netto). För inrikes födda är bilden annorlunda. Under samma tidsperiod flyttade 1435 personer födda i Sverige till Dalarna (netto). Inflyttningen skedde dock framförallt mellan 2020 och 2022, vilket kan vara en effekt av Corona-pandemin. Under 2024 flyttade 1 person född i Sverige till Dalarna från andra län netto.
 
-I syfte att kartlägga nyanlända flyktinginvandrares flyttningar i Sverige utarbetade SCB en rapport år 2016. I rapporten finns en beskrivande redogörelse för hur och i vilken utsträckning de som invandrat av flyktingskäl har flyttat inom landet efter fem års tid. De som invandrat av flyktingskäl för åren 1990–1994 och 2006–2010 kartlades. I denna rapport studeras mer specifikt hur de som invandrade till Dalarna mellan år 2006–2010 har flyttat efter fem års tid i landet.
+*Hur ser det ut med omflyttningar generellt bland utrikes födda de senaste 10 åren? Hur länge stannar de som flyttar in? Kommer de som flyttar att komma tillbaka?*
 
-*Exkludera delarna om kvotflyktingar och anvisat boende*
+<span class = "kommentar"> Hämta in diagram från Befolkningsutvecklingen i Dalarna i 3.5 - Inrikes flyttnetto i Dalarna </span>
 
-*Hur ser det ut med omflyttningar generellt bland utrikes födda de senaste 10 åren? Hur länge stannar de som flyttar in? Kommer de som flyttar tillbaka?*
+<span class = "kommentar"> Lägga till något om utrikes flyttningar och invandringsöverskottet </span>
 
-Omflyttningarna bland utrikes födda åren 2015–2018 var i störst under de två första åren som de bodde i Sverige. Antalet flyttningar minskade därefter ju längre vistelsetiden blev i landet. Eftersom personer med en kort vistelsetid i allmänhet ännu inte är särskilt etablerade på en viss plats, är det inte överraskande att de flyttar i större utsträckning. Anledningarna till flytt kan vara anvisning till annan ort av Migrationsverket, arbete, studier, närhet till släktingar, större möjlighet till bostad eller andra anledningar.
+Om invandringsöverskottet minskar och det negativa inrikes flyttnettot består kommer befolkningen i Dalarna att minska över tid. De senaste decenniernas ökning av befolkningen är i huvudsak en effekt av den invandring som varit.
 
-De med en kortare vistelsetid i Sverige på 0–2 år var de som flyttade i störst utsträckning mellan åren 2015–2018. Under år 2015 hade denna grupp en påtaglig högre inflyttning än under övriga år. En hypotes som behöver analyseras vidare är att detta kan bero på att många nyanlända personer med giltigt uppehållstånd år 2015 blev anvisade till Dalarna. Nära hälften av de inrikes inflyttade utrikes födda detta år med 0—2 års vistelsetid var antingen födda i Syrien eller Eritrea.  Trenden sedan år 2016 har sedan varit att fler av de nyanlända väljer att flytta från Dalarna än till länet från övriga Sverige. Eftersom denna trend även gällde före år 2014, finns det anledning att tro att utflyttningen av nyanlända med kort vistelsetid även i framtiden kommer att vara större än inflyttningen. Trenden är problematisk för Dalarnas del, då redan befintlig och framtida potentiel arbetskraft i och med detta försvinner från länet.
+SCB har under 2022 analyserat flyttningar inom kommun, inom län och mellan län under perioden 2002-2021 [(SCB, 2022)](<https://www.scb.se/contentassets/1a0f506a930d4df992f9689cecb01c3a/be0701_2022a01_br_be51br2210.pdf>){target="_blank"}^[SCB, 2022. Flyttningar inom kommun, inom län och mellan län 2002-2021. Demografiska rapporter 2022:10]. Den generella bilden är att antalet flyttningar per år har ökat under perioden, särskilt sedan mitten av 2010-talet. Flyttbenägenheten för utrikes födda har ökat och mellan 2017 och 2021 flyttar utrikes födda dubbelt så ofta som inrikes födda. Det är främst gruppen som bott i Sverige upp till 4 år som flyttar ofta. Utrikes födda med längre vistelsetider uppvisar samma flyttmönster som inrikes födda. Detta mönster noterades även i Region Dalarnas integraionsrapport från 2019. Det konstaterades att denna trend även gällde före år 2014, och att det finns anledning att tro att utflyttningen av nyanlända med kort vistelsetid även i framtiden kommer att vara större än inflyttningen. Trenden är problematisk för Dalarnas del, då redan befintlig och framtida potentiel arbetskraft i och med detta försvinner från länet.
+
+
+<span class = "kommentar"> Gammal text nedan </span>
+
+Det kan konstateras att flyttströmmarna har varit stora både till och från länet, både för utrikes och inrikes födda. Båda grupperna flyttar dock i större utsträckning från Dalarna till övriga Sverige än till Dalarna från övriga Sverige. Utrikes födda personer har generellt sett varit mer benägna att flytta från länet än inrikes födda varit.
+
+
 
 # Hälsa, ekonomi, tillit och demokrati
 
